# omegle

./: .gitignore  Makefile  README.md  auth_srvc.go  docker-compose.yml  envoy.yaml  go.mod  go.sum  main.go  nginx.conf  omegle.go  user.go
auth/: auth.go  name_generator.go
chat/: BUILD.bazel  chat.cc  chat.hpp  chat_srvc.cc  defs.h  user.cc  user.hpp
dockerfiles/auth_srvc_grpc/: Dockerfile
dockerfiles/chat_srvc_grpc/: Dockerfile
dockerfiles/grpc_proxy/: Dockerfile
pb/: omegle.proto
pb/auth/: BUILD.bazel  auth.proto
pb/chat/: BUILD.bazel  chat.proto
pb/cpp/pb/auth/: auth.grpc.pb.cc  auth.grpc.pb.h  auth.pb.cc  auth.pb.h
pb/cpp/pb/chat/: chat.grpc.pb.cc  chat.grpc.pb.h  chat.pb.cc  chat.pb.h
pb/go/pb/: omegle.pb.go  omegle_grpc.pb.go
pb/go/pb/auth/: auth.pb.go  auth_grpc.pb.go
pb/go/pb/chat/: chat.pb.go  chat_grpc.pb.go
web/: deploy.sh
web/pb/pb/: OmegleServiceClientPb.ts  omegle_pb.js
